examples/test/testpolicy11434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11434
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key33: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value33
          key10: value48
          key0: value13
      podSelector:
        matchLabels:
          key48: value48
          key8: value14
          key45: value14
